src/objects/Country__c.object
<CustomObject>
    <fields>
        <fullName>Geolocation__c</fullName>
        <label>Geolocation</label>
        <scale>14</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>part_of_uk__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Part of UK</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>title__c</fullName>
        <label>Title</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Country</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>title__c</columns>
        <columns>part_of_uk__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Country code</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Countries</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>